--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,29 +1,29 @@
 name: Stats
 
-  on:
-    push:
-      branches : [main]
+on:
+  push:
+    branches: [main]
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      steps:
-       - name: Checkout repo
-         uses: actions/checkout@v4
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-       - name: Setup Python
-         uses: action/setup-python@v5
-         with:
-           python-version: '3.11'
-           
-       - name: Run Script
-         run: python ./Roadmap/stats.py
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-       - name: Commit and Push changes
-         uses: stefanzweifel/git-auto-commit-action@v5
-           with:
-             commit_mesaage: Update stats
-             commit_user_name: Astro Aleph [GitHub Action]
-             commit_user_email: toniolf23@gmail.com
-             commit_author: astro-aleph
+      - name: Run Script
+        run: python ./Roadmap/stats.py
+
+      - name: Commit and Push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Update stats"
+          commit_user_name: "Astro Aleph [GitHub Action]"
+          commit_user_email: "toniolf23@gmail.com"
+          commit_author: "astro-aleph"
